# diverge-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dev.md  example.conf
.github/workflows/: docker.yml
cli/: Cargo.toml
cli/src/: args.rs  main.rs
diverge/: Cargo.toml
diverge/src/: conf.rs  diverge.rs  dohc.rs  domain_map.rs  from_lst.rs  ip_map.rs  lib.rs  main.rs  resolver.rs  tcpd.rs  udpd.rs  utils.rs
src/: conf.rs  diverge.rs  dns.rs  domain_map.rs  ip4set.rs  ip_map.rs  ipmap.rs  ipset.rs  main.rs  resolver.rs  udpd.rs  utils.rs
