[package]
name = "diverge"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "*", features = ["release_max_level_info"] }
env_logger = "*"

deku = "*"
tokio = { version = "1", features = ["net", "rt", "macros"] }
hickory-proto = { version = "*", default-features = false }

[profile.release]
lto = true
strip = true
