[package]
name = "diverge"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "*", features = ["release_max_level_info"] }
env_logger = "*"

tokio = { version = "1", features = [
	"net",
	"rt",
	"macros",
	"signal",
	"time",
	"sync",
] }
hickory-proto = { version = "*", default-features = false }
hickory-resolver = { version = "*", default-features = false, features = [
	"tokio-runtime",
	"dns-over-rustls",
	"native-certs",
] }

[dev-dependencies]
rand = "*"

[profile.release]
lto = true
strip = true
