[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
diverge = { path = "../diverge" }

log = { version = "*", features = ["release_max_level_info"] }
env_logger = "*"
clap = { version = "*", features = ["derive"] }

tokio = { version = "1", features = ["net", "rt", "macros", "time", "signal"] }
hickory-proto = { version = "*", default-features = false }
hickory-resolver = { version = "*", default-features = false, features = [
	"tokio-runtime",
	"dns-over-rustls",
	"dns-over-https-rustls",
	"dns-over-h3",
	"native-certs",
] }
