[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
diverge = { path = "../diverge" }

log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1", features = ["net", "rt", "macros", "time", "signal"] }
hickory-proto = { version = "0.24", default-features = false }
hickory-resolver = { version = "0.24", default-features = false, features = [
	"tokio-runtime",
	"dns-over-rustls",
	"dns-over-https-rustls",
	"dns-over-h3",
	"native-certs",
] }
