[package]
name = "diverge"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "*", features = ["release_max_level_info"] }
env_logger = "*"

treebitmap = { package = "ip_network_table-deps-treebitmap", version = "*" }
tokio = { version = "1", features = [
	"net",
	"rt",
	"macros",
	"signal",
	"time",
	"sync",
] }
bytes = "*"
reqwest = { version = "*", default-features = false, features = [
	"rustls-tls",
	"rustls-tls-native-roots",
	"http2",
	# "http3",
	"socks",
] }
hickory-proto = { version = "*", default-features = false }
hickory-resolver = { version = "*", default-features = false, features = [
	"tokio-runtime",
	"dns-over-rustls",
	"dns-over-https-rustls",
	"dns-over-h3",
	"native-certs",
] }

[dev-dependencies]
rand = "*"
